--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "d3": "7.9.0",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
